<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.finalyearproject.edu_teach.HeadMainActivity">

    <com.finalyearproject.edu_teach.ChalkTextView
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/mainMenuButtonPadding"
        android:text="@string/mainMenu"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/headerTextSize" />

    <ScrollView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainMenu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.finalyearproject.edu_teach.ChalkTextView
                android:id="@+id/faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMarginTop"
                android:onClick="menuSelected"
                android:padding="@dimen/mainMenuButtonPadding"
                android:text="@string/faculty"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/clickableTextView" />

            <com.finalyearproject.edu_teach.ChalkTextView
                android:id="@+id/classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMarginTop"
                android:onClick="menuSelected"
                android:padding="@dimen/mainMenuButtonPadding"
                android:text="@string/classes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/clickableTextView" />

            <com.finalyearproject.edu_teach.ChalkTextView
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMarginTop"
                android:onClick="menuSelected"
                android:padding="@dimen/mainMenuButtonPadding"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/clickableTextView" />

        </LinearLayout>

    </ScrollView>


    <com.finalyearproject.edu_teach.ChalkTextView
        android:id="@+id/signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="signOutUser"
        android:padding="@dimen/mainMenuButtonPadding"
        android:text="@string/signout"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/clickableTextView" />


</RelativeLayout>
