<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_evaluate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.finalyearproject.edu_teach.EvaluateActivity">

    <com.finalyearproject.edu_teach.ChalkTextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/headerTextSize"
        android:text="@string/eval"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/individualHeadings"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading">

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/nameHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:padding="@dimen/one"
            android:text="@string/name"
            android:textColor="@color/blue"
            android:textSize="@dimen/clickableTextView">

        </com.finalyearproject.edu_teach.ChalkTextView>

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/marksHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:padding="@dimen/one"
            android:paddingLeft="@dimen/resetButtonPadding"
            android:inputType="number"
            android:text="@string/mks"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:textSize="@dimen/clickableTextView">

        </com.finalyearproject.edu_teach.ChalkTextView>

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/confirmHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:padding="@dimen/one"
            android:textColor="@color/colorAccent"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textSize="@dimen/clickableTextView">

        </com.finalyearproject.edu_teach.ChalkTextView>

    </LinearLayout>

    <ListView
        android:layout_below="@+id/individualHeadings"
        android:id="@+id/listOfStudents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</RelativeLayout>
