<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.finalyearproject.edu_teach.FacultyMainActivity">

    <com.finalyearproject.edu_teach.ChalkTextView
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/mainMenuButtonPadding"
        android:text="@string/mainMenu"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textSize="@dimen/headerTextSize"/>


    <com.finalyearproject.edu_teach.ChalkTextView
        android:id="@+id/approval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMarginStart"
        android:padding="@dimen/mainMenuButtonPadding"
        android:layout_below="@+id/mainMenu"
        android:text="@string/unapproved"
        android:onClick="menuSelected"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/clickableTextView"/>



    <com.finalyearproject.edu_teach.ChalkTextView
        android:id="@+id/signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/mainMenuButtonPadding"
        android:text="@string/signout"
        android:onClick="signOutUser"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="@dimen/clickableTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
