<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_class_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.finalyearproject.edu_teach.ClassListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/classHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/classHeader"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:textSize="@dimen/clickableTextView"/>

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/subjectHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subjectHeader"
            android:textColor="@color/green"
            android:textAlignment="center"
            android:textSize="@dimen/clickableTextView"/>

    </LinearLayout>

    <ListView
        android:id="@+id/classList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"></ListView>

    <RelativeLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2">

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/placeholderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:textSize="@dimen/clickableTextView"
            android:textColor="@color/white"
            android:text="@string/takeASec"/>

    </RelativeLayout>


</LinearLayout>
