<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_upload_or_evaluate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.finalyearproject.edu_teach.UploadOrEvaluateActivity">

    <com.finalyearproject.edu_teach.ChalkTextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/defaultMarginTop"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/headerTextSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMarginTop"
            android:onClick="menuSelected"
            android:padding="@dimen/mainMenuButtonPadding"
            android:text="@string/upload"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/clickableTextView" />

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMarginTop"
            android:padding="@dimen/mainMenuButtonPadding"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/clickableTextView" />

        <com.finalyearproject.edu_teach.ChalkTextView
            android:id="@+id/eval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMarginTop"
            android:onClick="menuSelected"
            android:padding="@dimen/mainMenuButtonPadding"
            android:text="@string/eval"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/clickableTextView" />


    </LinearLayout>


</RelativeLayout>
